src/App.css
/* ... */
.hero--section--content {
  display: flex;
  font-weight: 900;
  flex-direction: column;
  align-items: flex-start;
  gap: 21.333px;
}
.hero--section--content--box > button {
  margin-top: 1.5rem;
}
.hero--section--title {
  color: var(--white);
  font-family: "Poppins", sans-serif;
  font-size: 4rem;
  font-weight: 700;
  line-height: 70px;
  align-self: stretch;
}
.hero--section--title--color {
  color: var(--white);
}
.hero--section-description {
  color: var(--light);
  font-size: 24px;
  font-weight: 400;
  line-height: 36px;
}

.hero--social--container {
  width: 100%;
}
.hero--social--icon > ul {
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1.5rem;
  flex-shrink: 0;
  text-decoration: none;
}
.hero--social--icon a {
  color: white;
  transition: color 0.3s;
}
.hero--social--icon a:hover {
  color: var(--bright-pink);
  cursor: pointer;
}
.hero--social--icon button {
  height: 3rem;
  width: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  border-radius: 0.7rem;
  background: var(--bg-card);
  border: none;
  transition: 0.3s ease-in-out;
  box-shadow: var(--btn-shadow);
  color: var(--bright-pink);
  cursor: pointer;
}

.hero--social--icon button:hover {
  background: var(--bg-card3);
  box-shadow: var(--btn-shadow-hover);
}

.hero--section--img {
  display: flex;
}
.hero--section--img > img {
  width: 40rem;
  height: 40rem;
}
/* Hero Section Style Ends */

/* About Us */
.about--section {
  display: grid;
  padding: 4rem 4rem 4rem 4rem;
  align-items: center;
  gap: 114.6px;
  grid-template-columns: repeat(2, 1fr);
}
.about--section--content-box {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
}
.about--section--content {
  display: flex;
  font-weight: 900;
  flex-direction: column;
  align-items: flex-start;
  gap: 21.333px;
}
.about-section--title {
  /* font-family: "Josefin Sans"; */
  align-self: stretch;
  color: var(--bright-pink);
}
.about--section-description {
  color: var(--light);
  font-size: 21.3px;
  font-weight: 400;
  line-height: 36px;
}
.about--section--img > img {
  width: 100%;
  height: 100%;
  justify-content: center;
  display: flex;
}
/* About Us Ends */

/* Skills Section Style */
.skills--section {
  display: flex;
  padding: 4rem 4rem 4rem 4rem;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 106.667px;
}
.skills--section--title {
  color: var(--bright-pink);
  font-size: 3rem;
  /* font-family: "Josefin Sans"; */
  font-weight: 700;
  line-height: 77px;
}
.skills--section--container {
  display: grid;
  justify-content: center;
  align-items: flex-start;
  gap: 42.6px;
  grid-template-columns: repeat(4, 1fr);
}
.skills--section--card {
  height: 25rem;
  display: flex;
  padding: 32px;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  flex: 1 0 0;
  border-radius: 10.6px;
  min-height: 250px;
  background: var(--bg-card);
  transition: 0.3s ease-in-out;
  box-shadow: var(--card-shadow);
}

.skills--section--card:hover {
  transform: scale(1.05);
  background: var(--bg-card3);
  box-shadow: var(--card-shadow-hover);
}
.skills--section--card:hover .skills--section--description {
  /* color: var(--light-pink); */
  background: var(--bg-card3);
}
.skills--section--img {
  /* background: #1a1a25 !important; */
  display: flex;
  padding: 13.3px;
  justify-content: center;
  align-items: center;
  gap: 13.3px;
  border-radius: 10.6px;
  background: #fff;
}
.skills--section--card--content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  align-self: stretch;
}
.skills--section--title {
  color: var(--bright-pink);
  font-size: 54px;
  font-weight: 700;
  line-height: 45px;
}
.skills--section--description {
  color: var(--light);
  font-size: 21.3px;
  font-style: normal;
  font-weight: 400;
  line-height: 32px;
}
/* Skills Style Ends */

/* Projects Section Style */
.project--section {
  padding: 4rem;
}

.project--container--card {
  background-color: var(--bg-shade);
  border-radius: 16px;
  padding: 5rem;
  background: var(--bg-card);
  box-shadow: -6px -6px 16px rgba(255, 255, 255, 0.02),
    6px 6px 12px rgba(0, 0, 0, 0.4);
}

.project--title--wrapper {
  text-align: left;
  margin-bottom: 3rem;
}

.project--section--container {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  gap: 4rem;
  padding: 2rem 0;
}
.project--section--title {
  color: var(--bright-pink);
  font-size: 3rem;
  /* font-family: "Josefin Sans", sans-serif; */
  font-weight: 700;
  line-height: 1.2;
  align-self: left;
}
.project--section--description {
  flex: 1;
  width: 50%;
  font-size: 24px;
  color: var(--light);
}
.project--cards--wrapper {
  flex: 1;
  width: 50%;
  display: flex;
  flex-direction: column;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  gap: 2rem;
  justify-items: center;
  align-items: center;
}

.project--card {
  background: var(--bg-card);
  box-shadow: var(--card-shadow);
  border-radius: 12px;
  padding: 1.5rem;
  width: 15rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transition: transform 0.3s ease;
  cursor: pointer;
  text-decoration: none;
  color: var(--light);
}

.project--card:hover {
  color: var(--bright-pink);
  background: var(--bg-card3);
  transform: scale(1.05);
  box-shadow: var(--card-shadow-hover);
}

.project--img--wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 1rem;
}

.project--img--wrapper a {
  font-style: none;
}

.project--card--content {
  text-align: center;
  vertical-align: middle;
}

.project--card--title {
  font-size: 1.25rem;
  color: var(--black);
  font-weight: 600;
}
/* ... */

